[gd_scene load_steps=2 format=3 uid="uid://c7g8k9h1j2m3n4"]

[ext_resource type="Script" path="res://scripts/ui/character_roster.gd" id="1_roster"]

[node name="CharacterRoster" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_roster")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.12, 0.1, 1)

[node name="HeaderContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 120.0
grow_horizontal = 2

[node name="TitleLabel" type="Label" parent="HeaderContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.7, 0.3, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 48
text = "Your Survivors"
horizontal_alignment = 1

[node name="SlotLabel" type="Label" parent="HeaderContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 20
text = "0/3 Survivors (Free Tier)"
horizontal_alignment = 1

[node name="CharacterListContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 140.0
offset_right = -40.0
offset_bottom = -140.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="CharacterListContainer"]
layout_mode = 2
follow_focus = true

[node name="CharacterList" type="VBoxContainer" parent="CharacterListContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="ButtonsContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = -100.0
offset_right = -40.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 20
alignment = 1

[node name="CreateNewButton" type="Button" parent="ButtonsContainer"]
custom_minimum_size = Vector2(250, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Create New Survivor"

[node name="BackButton" type="Button" parent="ButtonsContainer"]
custom_minimum_size = Vector2(150, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Back to Hub"

[node name="DeleteConfirmationDialog" type="ConfirmationDialog" parent="."]
title = "Confirm Deletion"
initial_position = 2
size = Vector2i(400, 150)
dialog_text = "Delete this character?"
ok_button_text = "Delete"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
